--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xo",
-  "version": "0.17.1",
+  "version": "0.17.1-react",
   "description": "JavaScript happiness style linter ❤️",
   "license": "MIT",
   "repository": "sindresorhus/xo",
@@ -76,6 +76,7 @@
     "eslint-plugin-import": "^2.0.0",
     "eslint-plugin-no-use-extend-native": "^0.3.2",
     "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-react": "^6.8.0",
     "eslint-plugin-unicorn": "^1.0.0",
     "get-stdin": "^5.0.0",
     "globby": "^6.0.0",
