--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xo",
-  "version": "0.17.3-react",
+  "version": "0.17.4-react",
   "description": "JavaScript happiness style linter ❤️",
   "license": "MIT",
   "repository": "sindresorhus/xo",
@@ -73,7 +73,6 @@
     "eslint": "^3.6.0",
     "eslint-config-xo": "^0.17.0",
     "eslint-formatter-pretty": "^1.0.0",
-    "eslint-import-resolver-webpack": "^0.7.0",
     "eslint-plugin-ava": "^3.1.0",
     "eslint-plugin-import": "^2.0.0",
     "eslint-plugin-no-use-extend-native": "^0.3.2",
@@ -97,6 +96,7 @@
     "ava": "*",
     "coveralls": "^2.11.9",
     "eslint-config-xo-react": "^0.10.0",
+    "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-react": "^6.3.0",
     "execa": "^0.5.0",
     "nyc": "^8.3.0",
