--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xo",
-  "version": "0.17.4-react",
+  "version": "0.17.5-react",
   "description": "JavaScript happiness style linter ❤️",
   "license": "MIT",
   "repository": "sindresorhus/xo",
@@ -73,6 +73,7 @@
     "eslint": "^3.6.0",
     "eslint-config-xo": "^0.17.0",
     "eslint-formatter-pretty": "^1.0.0",
+    "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-plugin-ava": "^3.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-no-use-extend-native": "^0.3.2",
